--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -1,6 +1,9 @@
 Test at http://localhost:81/alttp/public/
 
-Bugs:
+High Priority Bugs:
+
+
+Low Priority Bugs:
     Pushing on a solid object sitting on thorny ground shouldn't hurt you:
         -return tileBehaviors and objectBehaviors separately, only damage if tile is solid+damaging.
     Fix menu selection breaks sometimes
@@ -10,12 +13,14 @@ Bugs:
     Objects+enemies shouldn't be able to float on top of pits.
     nextAreaInstance is not rendered in Safari
 
+Outanding Questions:
+    - Is default linking bushes/rocks a problem, since they will sometimes hit spirit enemies players cannot see and think it is a bug? Maybe don't have many spirit enemies spawn early in the game, or only have them spawn places where the player is unlikely to throw objects (perhaps places with no objects to throw, or only lvl 2 glove object?)
+    - Do we want to implement one way links like physical effects spirit but not the other? It would make sense, but seems like a lot of work, so let's not do this for now unless we see some obvious wins. It is also a bit more complicated for the player to understand, especially if we have doubly linked, linked each way, and unlinked pairs.
+
 Graphics:
     Add sparkles to peach loot + hud.
 
-Outanding Questions:
-    - People will think the game is buggy if this is the default behavior for rocks/bushes since they will sometimes hit spirit enemies they cannot see... Maybe don't have many spirit enemies spawn early in the game, or only have them spawn places where the player is unlikely to throw objects (perhaps places with no objects to throw, or only lvl 2 glove object?)
-    - Do we want to implement one way links like physical effects spirit but not the other? It would make sense, but seems like a lot of work, so let's not do this for now unless we see some obvious wins. It is also a bit more complicated for the player to understand, especially if we have doubly linked, linked each way, and unlinked pairs.
+Todo:
 
 Quick Demo
     - Start with 6 hearts + weapon
