--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -1,7 +1,9 @@
 Test at http://localhost:81/alttp/public/
 
 High Priority Bugs:
-    Objects+enemies shouldn't be able to float on top of pits.
+    Items appear on top of bushes when leaving + coming back to section
+        - Just despawn items off screen.
+    Objects shouldn't be able to float on top of pits.
         - Make objects fall in pits.
         - Pit entrance should pull you in like other pits
 
@@ -18,22 +20,31 @@ Outanding Questions:
     - Do we want to implement one way links like physical effects spirit but not the other? It would make sense, but seems like a lot of work, so let's not do this for now unless we see some obvious wins. It is also a bit more complicated for the player to understand, especially if we have doubly linked, linked each way, and unlinked pairs.
 
 Graphics:
+    Add fall animation for objects that fall into pits (this isn't implemented yet)
     Add sparkles to peach loot + hud.
+    Add damage effects for hitting enemies?
+    Add damage effect for player hurt? (alttp doesn't have anything like this)
 
 Todo:
 
+
 Current tasks:
-    - Add growing vines:
-        - Watercup plants that can be tipped+poured onto sprouts.
-        - Sprouts that grow into vines when watered.
     - Add enemies:
         - Eggs that hatch into enemies if not destroyed first
-        - Ground enemies:
-            Tiny beatles the move sporadically
-            Vanilla beatles that move average speed and will move towards the player when nearby
-            Charging beatles that will give a tell and then charge very quickly at the player only stopping when they can no longer move forward
         - Vine enemies that can be knocked to the ground
-        - Flying enemies
+    - Sticky Web Ground
+    - Enemies drop money:
+        1/20 = 20, 1/10 = 5, 40% = 1, 1/4 = life, 1 / 5 = nothing
+    - Make cliffs omni directional (but you can't jump from 'climbing')
+    - 50 money chest
+    - Difficulty shrine:
+        - 50 money per point
+        - move points around for free
+        - second chance = faerie
+            - 100/200/300/400 for a filled chance, 50 for a refill
+        - Or second chance is only for boss, and have a single refill tank that you can charge like in metroid?
+        - Remove boss webs
+        - Reduce boss health
     - Add boss:
         - Spawns eggs
         - Drains light and regains a bit of health for every 25% lost
