--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -16,7 +16,7 @@ Low Priority Bugs:
         I think this is because the door doesn't update until it is in the current areaInstance
     nextAreaInstance is not rendered in Safari
 
-Outanding Questions:
+Outstanding Questions:
     - Is default linking bushes/rocks a problem, since they will sometimes hit spirit enemies players cannot see and think it is a bug? Maybe don't have many spirit enemies spawn early in the game, or only have them spawn places where the player is unlikely to throw objects (perhaps places with no objects to throw, or only lvl 2 glove object?)
     - Do we want to implement one way links like physical effects spirit but not the other? It would make sense, but seems like a lot of work, so let's not do this for now unless we see some obvious wins. It is also a bit more complicated for the player to understand, especially if we have doubly linked, linked each way, and unlinked pairs.
 
@@ -38,6 +38,9 @@ Current tasks:
         - Or second chance is only for boss, and have a single refill tank that you can charge like in metroid?
         - Remove boss webs
         - Reduce boss health
+
+Add NPCs:
+    Basically moving signs that look like the MC for now.
 
 Idea:
     Objects you can bounce off of when jumping
