Add new money graphics+sound.

--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -21,12 +21,45 @@ Outstanding Questions:
     - Do we want to implement one way links like physical effects spirit but not the other? It would make sense, but seems like a lot of work, so let's not do this for now unless we see some obvious wins. It is also a bit more complicated for the player to understand, especially if we have doubly linked, linked each way, and unlinked pairs.
 
 Graphics:
+    Add Item Get Frame gfx/wukongimportantitem.png 20x28
+    // Let's draw this to its own canvas and only update when magic changes px value.
+    Add mana bar graphics gfx/hud/magicbar.png [
+        topCap, bottomCap, topBar (top 5px), bottomBar (bottom 5px), barBack,
+        manaBottom, manaFill, manaLine, manaTop (used when full)
+    ]
     Add fall animation for objects that fall into pits (this isn't implemented yet)
     Add sparkles to peach loot + hud.
     Add damage effects for hitting enemies?
     Add damage effect for player hurt? (alttp doesn't have anything like this)
 
 Todo:
+
+Dungeon 1:
+    - Vanara burial grounds
+    - Traps+locks to keep intruders away. Need to use bow to enter
+        - Someone was stealing Vanara remains
+    - Located near the main Vanara village in the Southwest forest
+    - Built around a suspended animation capsule
+        - The Vanara population is too large so they rotate members in and out of suspended animation.
+        - Suspension pods erase Vanara memories to prevent then from becoming restless.
+        - Pods also regenerate Vanara bodies, which would break down without nurishment from the spirit world.
+        - Vanara village population is 20-30 individuals at a time. There are 100-300 total, most suspended.
+    - The goal of the dungeon is to meet with the care taker who looks after and maintains the suspended Vanara.
+        - The original Vanara crew rotate members into the care taker role once every X years.
+    - A facade is built aroaund the structure to disguise it as a mundane structure
+        - The Vanara village posts guards in addition to the traps to keep people out
+    - MCs father refused to go back to sleep, having fallen in love with MCs mother and not wanting to forget about her.
+
+
+Dungeon flavor philosophy:
+    All Vanara structures are part of the Vanara ship and related to some functionality, such as the regeneration pods.
+    Vanara spirit structures allow free exploration in astral projection because Vanara spirits can tether to the Vanara ship and leave their bodies behind. If the MC knows how to teleport, they can use this to free travel around the world.
+    All Native structures are built to native spirit gods who functioned as sevants to the old native spirit beings and were created for specific purposes like resource harvesting, processing and crafting.
+
+Ability order:
+    Completing the Peach Cave awakens MCs spirit abilities giving them their spirit bar + cat eyes.
+    They visit the care taker to obtain spirit sight, they are then instructed to learn astral projection + teleportation to visit the Vanara command center
+
 
 
 Current tasks:
