--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -21,8 +21,8 @@ Outstanding Questions:
     - Do we want to implement one way links like physical effects spirit but not the other? It would make sense, but seems like a lot of work, so let's not do this for now unless we see some obvious wins. It is also a bit more complicated for the player to understand, especially if we have doubly linked, linked each way, and unlinked pairs.
 
 Graphics:
+    Sweat animation when pulling on something you cannot move.
     Add Item Get Frame gfx/wukongimportantitem.png 20x28
-    // Let's draw this to its own canvas and only update when magic changes px value.
     Add fall animation for objects that fall into pits (this isn't implemented yet)
     Add sparkles to peach loot + hud.
     Add damage effects for hitting enemies?
@@ -99,12 +99,6 @@ Quick Demo
     - Staff tool section
     - Charge tool to unlock lvl 2 tools
     - Combined tool puzzles
-
-Prologue Dungeon: Peach Cave
-    - Peach cave entrance is near the river in between the waterfall and the crater lake.
-    - Entrance is dark, MC falls into pit 2 stories deep and lands in a pool and has to swim to shallow ground.
-    - Area is dark but lit up by glowing mushrooms in some places.
-
 
 Dungeon 1: Vanara Temple
     - Find dodge roll technique, required to complete.
