Add water animations and astral projection skill.

--- a/documentation/TODO.txt
+++ b/documentation/TODO.txt
@@ -27,6 +27,8 @@ Graphics:
 Todo:
 
 Current tasks:
+    - Clean up attack effects on defeating bosses.
+        - Need to set a flag on all attack effects so they are easy to find and remove.
     - Difficulty shrine:
         - 50 money per point
         - move points around for free
